--- a/tengjiao-seed/tengjiao-seed-templet-admin/src/main/resources/application-dev.yml
+++ b/tengjiao-seed/tengjiao-seed-templet-admin/src/main/resources/application-dev.yml
@@ -51,5 +51,5 @@ mybatis-plus:
     # (开发测试)开启或关闭(生产)控制台sql打印；如果已经使用p6spy就没必要配置它打印SQL了(关闭它)，因为p6spy更好用
     # 关闭方法：log-impl设置为空或删除配置即可；
     # 开启方法：log-impl值设置为org.apache.ibatis.logging.stdout.StdOutImpl
-    log-impl: #org.apache.ibatis.logging.stdout.StdOutImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
