--- a/tengjiao-seed/tengjiao-seed-templet-admin/pom.xml
+++ b/tengjiao-seed/tengjiao-seed-templet-admin/pom.xml
@@ -130,6 +130,15 @@
 
         <!-- springboot 打包方式二 分离配置文件、主程序和依赖库 -->
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <!-- 不执行单元测试，但会编译测试类并在target/test-classes目录下生成相应的class -->
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
             <!-- 配置文件与资源文件 拷贝到config目录 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
