--- a/tengjiao-seed/tengjiao-seed-admin/tengjiao-seed-admin-ui/.gitignore
+++ b/tengjiao-seed/tengjiao-seed-admin/tengjiao-seed-admin-ui/.gitignore
@@ -1,17 +1,13 @@
 .DS_Store
-node_modules
-/dist
-
-
-# local env files
-.env.local
-.env.*.local
+node_modules/
+dist/
 
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+**/*.log
 
 # Editor directories and files
 .idea
@@ -21,3 +17,11 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+*.local
+
+tests/**/coverage/
+tests/e2e/reports
+selenium-debug.log
+
+package-lock.json
+yarn.lock
